--- a/app/src/main/res/menu/menu_item_list.xml
+++ b/app/src/main/res/menu/menu_item_list.xml
@@ -8,4 +8,11 @@
         android:icon="@drawable/ic_action_new"
         android:alphabeticShortcut="@string/add_new_shortcut"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/menu_item_search"
+        android:actionViewClass="android.widget.SearchView"
+        android:title="@string/search_label"
+        android:icon="@drawable/ic_action_search"
+        android:alphabeticShortcut="@string/search_shortcut"
+        app:showAsAction="always"/>
 </menu>
