--- a/app/src/main/res/layout/item_edit.xml
+++ b/app/src/main/res/layout/item_edit.xml
@@ -51,15 +51,26 @@
                     android:inputType="textMultiLine"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/item_edit_location_label" />
-                <EditText
-                    android:id="@+id/item_edit_location"
-                    android:singleLine="true"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content" />
+                <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/item_edit_location_label" />
+                    <EditText
+                        android:id="@+id/item_edit_location"
+                        android:singleLine="true"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dip"/>
+                    <ImageButton
+                        android:layout_alignParentRight="true"
+                        android:id="@+id/item_edit_map_button"
+                        android:layout_width="48dip"
+                        android:layout_height="48dip"
+                        android:scaleType="centerInside"
+                        android:background="@drawable/ic_action_place"/>
+                </RelativeLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
