--- a/app/src/main/res/menu/menu_item_edit.xml
+++ b/app/src/main/res/menu/menu_item_edit.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
     <item
+        android:id="@+id/action_share"
+        app:showAsAction="ifRoom"
+        android:title="@string/share_label"
+        android:alphabeticShortcut="@string/share_shortcut"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
+    <item
         android:id="@+id/action_delete"
         android:title="@string/delete_label"
         android:alphabeticShortcut="@string/delete_shortcut"/>
