Added item purchased flag to the item list.

--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -105,4 +105,9 @@
                 style="?android:attr/ratingBarStyleSmall" />
         </LinearLayout>
     </LinearLayout>
+    <ImageView
+        android:id="@+id/item_list_row_purchased"
+        android:layout_width="96dip"
+        android:layout_height="95dip"
+        android:scaleType="fitCenter" />
 </LinearLayout>
