--- a/app/src/main/res/layout/item_edit.xml
+++ b/app/src/main/res/layout/item_edit.xml
@@ -56,6 +56,20 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@string/item_edit_price_label" />
+                    <EditText
+                        android:id="@+id/item_edit_price"
+                        android:singleLine="true"
+                        android:inputType="numberDecimal"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dip"/>
+                </RelativeLayout>
+                <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="@string/item_edit_location_label" />
                     <EditText
                         android:id="@+id/item_edit_location"
